--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HTML&CSS</title>
-  <link rel="stylesheet" type="text/css" href="Micro-project.css" />
+  <link rel="stylesheet" type="text/css" href="Micro-project-1.css" />
   
 </head>
 
